# pingi

./: LICENSE  README.md  concheck.py  pingi.py  pyproject.toml  test_pingi.py
.github/workflows/: testpingi.yml
tests/: test_pingi.py
