[tool.poetry]
name = "concheck"
version = "0.1.0"
description = "Internet connection check"
authors = ["Adrian Schneider <adrian.schneider.pr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ping3 = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
